<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ELANA</string>
    <string name="permissions_head">ELANA utiliza los siguientes permisos para mejorar la experiencia de aprendizaje:</string>
    <string name="Collecting_Data">Recogida de datos</string>
    <string name="hello_blank_fragment">Hola fragmento en blanco</string>
    <string name="push_success">¡¡Transmisión exitosa!!</string>
    <string name="push_fail">¡¡Transmisión fallida!!</string>
    <string name="kix_assessment">ELANA</string>
    <string name="kix_assessment_tag">Early Language &amp; Literacy and Numeracy Assessment</string>
    <string name="Okay">Ok</string>
    <string name="ok">Ok</string>
    <string name="please_wait_pushing">Por favor, espere, transmitiendo datos...</string>
    <string name="details">Detalles</string>
    <string name="goto_next">Ir al siguiente</string>
    <string name="cancel">Cancelar</string>
    <string name="profile">Perfil</string>
    <string name="create_surveyor">Crear cuenta de encuestador</string>
    <string name="children_surveyed">Niños(as) encuestado(as)s:</string>
    <string name="children_assessed">Niños(as) evaluados(as):</string>
    <string name="child_name">Nombre del niño(a)</string>
    <string name="village">Pueblo</string>
    <string name="assessment_given">Evaluación realizada</string>
    <string name="assessments_synced">Evaluaciones sincronizadas</string>
    <string name="score_count">Puntuación Recuento :</string>
    <string name="student_count">Recuento de niños :</string>
    <string name="village_count">Recuento de aldeas :</string>
    <string name="household_count">Recuento de hogares :</string>
    <string name="surveyor_count">Recuento de encuestadores :</string>
    <string name="edit_child_info">Editar la información del (de la) niño(a)</string>
    <string name="add_village_info">Añadir información del pueblo</string>
    <string name="update_village_info">Actualizar la información de la aldea</string>
    <string name="str_village_info">Información de la aldea</string>
    <string name="str_V01">¿Existe una carretera de asfalto/concreto para acceder a la localidad?</string>
    <string name="str_V02">¿Existe servicio de transporte público disponible para la localidad?</string>
    <string name="str_V03">¿La localidad tiene acceso a energía eléctrica?</string>
    <string name="str_V04">¿La localidad cuenta con una clínica/hospital gubernamental/público?</string>
    <string name="str_V05">¿La localidad cuenta con una clínica/hospital privada?</string>
    <string name="str_V06a">¿Existe alguna escuela o preescolar que ofrezca clases de preprimaria (jardín de niños o prescolar) en la localidad?</string>
    <string name="str_V06b">¿qué tipo de escuela(s) ofrecen clases de preprimaria (jardín de niños o prescolar) en la localidad?</string>
    <string name="str_V07a">¿Existe alguna escuela primaria en la localidad?</string>
    <string name="str_V07b">¿qué tipo de escuela(s) primaria hay en la localidad?</string>
    <string name="str_add_household">Añadir hogar</string>
    <string name="update_household">Actualizar hogar</string>
    <string name="str_isSampledHH">El hogar muestreado está</string>
    <string name="str_isSampledHH_one">Cerrada</string>
    <string name="str_isSampledHH_two">No responden</string>
    <string name="str_isSampledHH_three">Abierta</string>
    <string name="str_HH01">número de sección</string>
    <string name="str_HH02">Nombre de quien responde</string>
    <string name="str_HH03">Nombre del (de la) jefe(a) del hogar</string>
    <string name="str_HH04a">¿Hay niños de entre 4 a 10 años que vivan regularmente en el hogar?</string>
    <string name="str_HH04b">¿cuántos?</string>
    <string name="str_HH05">Teléfono/Número de celular del hogar
 (anote sólo si está disponible y dispuesto a compartirlo)</string>
    <string name="str_add_household_info">Añadir información del hogar</string>
    <string name="str_update_household_info">Actualizar la información del hogar</string>
    <string name="str_household_info">Información del hogar</string>
    <string name="str_gnr_household_info">Información general del hogar encuestado</string>
    <string name="str_HH06a">Número de personas que viven regularmente en el hogar</string>
    <string name="str_HH06b">¿En su hogar se habla español?</string>
    <string name="str_HH06c">¿con qué frecuencia se habla español en el hogar?</string>
    <string name="str_HH06d">¿Se habla algún otro idioma en el hogar?</string>
    <string name="str_always">Siempre</string>
    <string name="str_sometimes">De vez en cuando</string>
    <string name="str_HH_asset_info">Información sobre los bienes del hogar</string>
    <string name="str_HH07a">Techo del hogar</string>
    <string name="str_HH07a_one">Sin techo</string>
    <string name="str_HH07a_two">Techo terminado</string>
    <string name="str_HH07a_three">Techo natural o rudimentario</string>
    <string name="str_HH07b">Material de las paredes (externas) del hogar</string>
    <string name="str_HH07b_one">Sin paredes</string>
    <string name="str_HH07b_two">Paredes terminadas</string>
    <string name="str_HH07b_three">Paredes naturales o rudimentarias</string>
    <string name="str_HH07c">¿Cuál es la fuente de iluminación que se utiliza con regularidad en el hogar?</string>
    <string name="str_HH07c_one">Electricidad</string>
    <string name="str_HH07c_two">Solar</string>
    <string name="str_HH07c_three">Velas</string>
    <string name="str_HH07c_four">Otro</string>
    <string name="str_HH07d">¿Cuál es la fuente de agua potable que se utiliza con regularidad en el hogar?</string>
    <string name="str_HH07d_one">Agua entubada</string>
    <string name="str_HH07d_two">Bomba manual</string>
    <string name="str_HH07d_three">Perforación</string>
    <string name="str_HH07d_four">Pozo</string>
    <string name="str_HH07d_five">Río/Arroyo/estanque</string>
    <string name="str_HH07d_six">Agua purificada o embotellada</string>
    <string name="str_HH07d_seven">Otro</string>
    <string name="str_HH07e">¿Conexión eléctrica?</string>
    <string name="str_HH07f">¿Inodoro/Letrinas ?</string>
    <string name="str_HH07g">¿Hay al menos un miembro (que no sean los padres del niño) que haya completado la preparatoria/bachillerato?</string>
    <string name="str_HH07h">¿Hay algún material de lectura en casa, como libros de cuentos u otros libros infantiles, además de los libros de texto escolares?</string>
    <string name="str_HH07i">¿Hay algún tipo de material de lectura en casa que no esté destinado a los niños, por ejemplo, libros de texto religiosos, periódicos, revistas, etc.?</string>
    <string name="str_HH07j">¿Computadora/laptop/tablet ?</string>
    <string name="str_HH07k">¿Televisión?</string>
    <string name="str_HH07l">¿Radio?</string>
    <string name="str_HH07m">¿Teléfono móvil?</string>
    <string name="str_HH07n">¿Es un smartphone o teléfono inteligente?</string>
    <string name="str_HH07o">¿Automóvil o cuatrimoto ?</string>
    <string name="str_HH07p">¿Motocicleta ?</string>
    <string name="str_HH07q">¿Bicicleta ?</string>
    <string name="str_HH_have_lbl">Este hogar tiene</string>
    <string name="select_household">Seleccione el hogar</string>
    <string name="add_child">Añadir niño</string>
    <string name="update_child">Actualizar niño</string>
    <string name="str_CH04a">¿El (la) niño(a) tiene alguna discapacidad?</string>
    <string name="str_CH04b">¿qué discapacidad?</string>
    <string name="str_CH04b_op1">Visual</string>
    <string name="str_CH04b_op2">Auditiva/Del habla</string>
    <string name="str_CH04b_op3">Física</string>
    <string name="str_CH04b_op4">Cognitiva</string>
    <string name="str_CH05">¿Está [nombre del(de la) niño(a)] inscrito actualmente en alguna escuela o preescolar?</string>
    <string name="str_CH06c">¿El español es el idioma oficial de enseñanza en la escuela?
 (en el caso de los niños más pequeños, quizá usted pueda consultar sus libros de texto/hojas de trabajo/hojas de actividades para confirmarlo)</string>
    <string name="str_CH06d">¿Cuál es la situación actual de la escuela?</string>
    <string name="str_CH06d_one">La escuela está abierta y se realizan actividades de enseñanza-aprendizaje para ese grado</string>
    <string name="str_CH06d_two">La escuela está abierta pero no se realizan actividades de enseñanza-aprendizaje</string>
    <string name="str_CH06d_three">La escuela está cerrada</string>
    <string name="str_CH06e">¿Qué tipo de actividades se están llevando a cabo?</string>
    <string name="str_CH06e_one">Sólo en línea/a distancia (mediante llamada telefónica, Zoom, WhatsApp, Google Meet, SMS, etc.)</string>
    <string name="str_CH06e_two">Sólo actividades físicas/en persona (el(la)niño(a) va a la escuela para asistir a clases)</string>
    <string name="str_CH06e_three">Híbridas (actividades tanto en línea/remotas como presenciales</string>
    <string name="str_CH06f">¿Tiene [nombre del(de la) niño(a)] libros para el grado actual?</string>
    <string name="str_CH06g">¿Alguna vez [nombre del(de la) niño(a)] repitió algún grado escolar?</string>
    <string name="str_CH07a">¿Ha estado [Nombre del(de la) niño(a)] inscrito alguna vez en la escuela?</string>
    <string name="str_CH07d">¿Cuál fue la razón principal por la que [nombre del(de la) niño(a)] abandonó sus estudios?</string>
    <string name="str_reasonToDrop_one">No pudo solventar los pagos</string>
    <string name="str_reasonToDrop_two">La escuela fue cerrada</string>
    <string name="str_reasonToDrop_three">No aprobó algún grado, por lo que abandonó</string>
    <string name="str_reasonToDrop_four">No había escuelas cerca que estuvieran disponibles para cursar el siguiente grado</string>
    <string name="str_reasonToDrop_five">Ya no estaba interesado(a)</string>
    <string name="str_reasonToDrop_six">Otro</string>
    <string name="str_reasonToDrop_seven">No se sabe</string>
    <string name="str_CH08">¿Actualmente, [nombre del (de la) niño(a)] asiste a alguna clase pagada (adicional/regularización) para revisar contenidos escolares?</string>
    <string name="str_CH09">¿Ha llevado [nombre del(de la) niño(a)] a casa algunos materiales para leer de la biblioteca escolar o de algún otro lugar (a parte de libros escolares) en las últimas dos semanas?</string>
    <string name="str_CH10a">¿Ayuda alguien en casa al(a la) niño(a) con su tarea?</string>
    <string name="str_CH10b">¿quién ayuda a [nombre del (de la)niño(a)] con MÁS frecuencia?</string>
    <string name="str_CH10b_one">Padre</string>
    <string name="str_CH10b_two">Madre</string>
    <string name="str_CH10b_three">Hermano(a) mayor</string>
    <string name="str_CH10b_four">Tío</string>
    <string name="str_CH10b_five">Tía</string>
    <string name="str_CH10b_six">Primo(a)</string>
    <string name="str_CH10b_seven">Otro</string>
    <string name="str_CH10c">¿Con qué frecuencia alguien en el hogar lee o cuenta historias a [nombre del (de la)niño(a)]?</string>
    <string name="str_CH10c_one">Nunca</string>
    <string name="str_CH10c_two">Menos de una vez a la semana</string>
    <string name="str_CH10c_three">1-2 días a la semana</string>
    <string name="str_CH10c_four">3-4 días a la semana</string>
    <string name="str_CH10c_five">5-7 días a la semana</string>
    <string name="additional_learning_sup">Apoyo adicional de aprendizaje en casa</string>
    <string name="add_parent_information">Añadir información de los padres</string>
    <string name="add_village">Añadir localidad</string>
    <string name="hint_village">Localidad</string>
    <string name="hint_district">Municipio</string>
    <string name="hint_state">Districto</string>
    <string name="save">Guardar</string>
    <string name="goto_next_task">¿Quieres pasar a la siguiente tarea?</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>
</resources>