<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <RelativeLayout
        android:layout_width="@dimen/_240sdp"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:layout_centerInParent="true"
        android:elevation="@dimen/_5sdp"
        android:background="@drawable/dialog_bg">

        <TextView
            android:id="@+id/dia_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_10sdp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_alignParentTop="true"
            android:paddingHorizontal="@dimen/_7sdp"
            android:text="@string/goto_next_task"
            android:textColor="@color/colorText"
            android:textSize="@dimen/_15sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dia_title"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/dia_yes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:layout_marginVertical="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_weight="1"
                android:padding="@dimen/_5sdp"
                android:text="@string/yes"
                android:textAllCaps="true"
                android:textAlignment="center"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                app:strokeColor="@color/colorBtnGreenDark"
                app:rippleColor="@color/colorBtnGreenDark"
                android:textAppearance="@dimen/_5sdp"
                android:textColor="@color/colorBtnGreenDark"
                android:textSize="@dimen/_10sdp"
                app:cornerRadius="@dimen/_20sdp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/dia_no"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:layout_marginVertical="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_weight="1"
                android:padding="@dimen/_5sdp"
                android:text="@string/no"
                android:textAllCaps="true"
                android:textAlignment="center"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                app:strokeColor="@color/colorBtnRedDark"
                app:rippleColor="@color/colorBtnRedDark"
                android:textAppearance="@dimen/_5sdp"
                android:textColor="@color/colorBtnRedDark"
                android:textSize="@dimen/_10sdp"
                app:cornerRadius="@dimen/_20sdp" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>