<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_parentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    tools:context=".ui.household_activity.Fragment_AddHousehold">

    <TextView
        android:id="@+id/tv_TitleLBL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/add_village"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tv_TitleLBL"
        android:layout_marginTop="@dimen/_20sdp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:orientation="vertical"
            android:paddingTop="@dimen/_5sdp"
            android:paddingBottom="@dimen/_5sdp">
            <!--            android:background="@drawable/rounded_form_bg"-->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_state"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:textColor="@color/colorText"
                android:textSize="@dimen/_12sdp" />

            <Spinner
                android:id="@+id/spn_State"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:background="@drawable/gradient_spinner"
                android:gravity="center_vertical"
                android:elevation="@dimen/_2sdp"
                android:popupBackground="@drawable/choose_level_bg"
                android:textColor="@color/colorText" />

            <!--            <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_State"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawablePadding="@dimen/_5sdp"
                            android:imeOptions="actionNext|flagNoExtractUi"
                            android:inputType="text"
                            android:singleLine="true"
                            android:textColor="@color/colorText" />-->

        </LinearLayout>
        <!--                android:textColor="@color/colorText" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:orientation="vertical"
            android:paddingStart="@dimen/_15sdp"
            android:paddingTop="@dimen/_5sdp"
            android:paddingEnd="@dimen/_15sdp"
            android:paddingBottom="@dimen/_5sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_district"
                android:textColor="@color/colorText"
                android:textSize="@dimen/_12sdp" />

            <Spinner
                android:id="@+id/spn_District"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_2sdp"
                android:background="@drawable/gradient_spinner"
                android:gravity="center_vertical"
                android:popupBackground="@drawable/choose_level_bg"
                android:textColor="@color/colorText" />

            <!--            <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_District"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/_5sdp"
        android:imeOptions="actionNext|flagNoExtractUi"
        android:inputType="text"
        android:singleLine="true"
        android:textColor="@color/colorText" />-->

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:orientation="vertical"
            android:paddingStart="@dimen/_15sdp"
            android:paddingTop="@dimen/_5sdp"
            android:paddingEnd="@dimen/_15sdp"
            android:paddingBottom="@dimen/_5sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_village"
                android:textColor="@color/colorText"
                android:textSize="@dimen/_12sdp" />

            <Spinner
                android:id="@+id/spn_Village"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_2sdp"
                android:background="@drawable/gradient_spinner"
                android:gravity="center_vertical"
                android:popupBackground="@drawable/choose_level_bg"
                android:textColor="@color/colorText" />

            <!--            <com.google.android.material.textfield.TextInputEditText-->
            <!--                android:id="@+id/et_VillageName"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:drawablePadding="@dimen/_5sdp"-->
            <!--                android:imeOptions="actionNext|flagNoExtractUi"-->
            <!--                android:inputType="text"-->
            <!--                android:singleLine="true"-->

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_50sdp"
            android:paddingTop="@dimen/_5sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:text="@string/save"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textAppearance="@dimen/_5sdp"
            android:textColor="@color/white"
            android:textSize="@dimen/_10sdp"
            app:cornerRadius="@dimen/_20sdp" />

    </LinearLayout>


</RelativeLayout>